--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="/index.html">Web<span>Studio</span></a>
+        <a href="./index.html">Web<span>Studio</span></a>
         <ul>
-          <li><a href="/index.html">Студия</a></li>
+          <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
