--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       <nav>
         <a href="./index.html">Web<span>Studio</span></a>
         <ul>
-          <li><a href="/index.html">Студия</a></li>
+          <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
