Разметил страницу Портфолио

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
 
   <body>
@@ -82,12 +88,7 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img
-              src="./images/our-team/igor.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
+            <img src="./images/our-team/igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
@@ -107,12 +108,7 @@
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/our-team/mihail.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
+            <img src="./images/our-team/mihail.jpg" alt="Михаил Ермаков" width="270" height="260" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -124,7 +120,9 @@
       <a href="/index.html">Web<span>Studio</span></a>
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li>
+            <a href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
