--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
 
   <body>
@@ -26,12 +32,105 @@
       </ul>
     </header>
 
+    <main>
+      <!--  Примеры проэктов-->
+      <section>
+        <h1 hidden>Наши проэкты</h1>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/tehnokryk.jpg"
+              alt="Страница Вэб сайта открыта на ноутбуке"
+              width="370"
+              height="294"
+            />
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/golden-star.jpg"
+              alt="Два человека играют в баскетбол"
+              width="370"
+              height="294"
+            />
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/sea-food.jpg"
+              alt="Баннер ресторана"
+              width="370"
+              height="294"
+            />
+            <h2>Ресторан Seafood</h2>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" height="294" />
+            <h2>Проект Prime</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/boxes.jpg" alt="Две коробки" width="370" height="294" />
+            <h2>Проект Boxes</h2>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/borders.jpg"
+              alt="Изображение карты на мониторе"
+              width="370"
+              height="294"
+            />
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/edition.jpg"
+              alt="Открытая книга"
+              width="370"
+              height="294"
+            />
+            <h2>Издание Limited Edition</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/lab.jpg" alt="Ярлык" width="370" height="294" />
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/business.jpg"
+              alt="Человек работает за ноутбуком"
+              width="370"
+              height="294"
+            />
+            <h2>Growing Business</h2>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer>
       <a href="/index.html">Web<span>Studio</span></a>
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li>
+            <a href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
