--- a/index.html
+++ b/index.html
@@ -16,60 +16,64 @@
 
   <body>
     <!-- Header -->
-    <header>
-      <nav>
-        <a href="./index.html">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo link" href="./index.html">Web<span class="logo-primary">Studio</span></a>
+        <ul class="nave-list list">
+          <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
+          <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li><a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="nav-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
       <!-- Hero -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-btn" type="button">Заказать услугу</button>
       </section>
 
       <!--Особенности  -->
-      <section>
+      <section class="advantages">
         <h2 hidden>Особенности</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <ul class="advantages-list list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Внимание к деталям</h3>
+            <p class="advantages-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Пунктуальность</h3>
+            <p class="advantages-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Планирование</h3>
+            <p class="advantages-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Современные технологии</h3>
+            <p class="advantages-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li><img src="./images/computer.jpg" alt="Вёрстка" width="370" height="294" /></li>
           <li>
             <img
@@ -84,47 +88,53 @@
       </section>
 
       <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img src="./images/our-team/igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member">Игорь Демьяненко</h3>
+            <p class="team-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/our-team/olga.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member">Ольга Репина</h3>
+            <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/our-team/nikolay.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-member">Николай Тарасов</h3>
+            <p class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/our-team/mihail.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member">Михаил Ермаков</h3>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="/index.html">Web<span>Studio</span></a>
+    <footer class="footer">
+      <a class="logo link" href="/index.html">Web<span class="logo-secondary">Studio</span></a>
       <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8">г. Киев, пр-т Леси Украинки, 26</a>
+        <ul class="footer-list list">
+          <li class="footer-item">
+            <a class="map-link link" href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="footer-item">
+            <a class="footer-contact link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
