--- a/portfolio.html
+++ b/portfolio.html
@@ -16,123 +16,147 @@
 
   <body>
     <!-- Header -->
-    <header>
-      <nav>
-        <a href="./index.html">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo link" href="./index.html">Web<span>Studio</span></a>
+        <ul class="nave-list list">
+          <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
+          <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li><a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="nav-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
       <!--  Примеры проэктов-->
-      <section>
+      <section class="projects">
         <h1 hidden>Наши проэкты</h1>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="btn-list list">
+          <li class="btn-item"><button class="projects-btn" type="button">Все</button></li>
+          <li class="btn-item"><button class="projects-btn" type="button">Веб-сайты</button></li>
+          <li class="btn-item"><button class="projects-btn" type="button">Приложения</button></li>
+          <li class="btn-item"><button class="projects-btn" type="button">Дизайн</button></li>
+          <li class="btn-item"><button class="projects-btn" type="button">Маркетинг</button></li>
         </ul>
 
-        <ul>
-          <li>
-            <img
-              src="./images/portfolio/tehnokryk.jpg"
-              alt="Страница Вэб сайта открыта на ноутбуке"
-              width="370"
-              height="294"
-            />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+        <ul class="projects-list list">
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                src="./images/portfolio/tehnokryk.jpg"
+                alt="Страница Вэб сайта открыта на ноутбуке"
+                width="370"
+                height="294"
+              />
+              <h2 class="projects-title">Технокряк</h2>
+              <p class="projects-text">Веб-сайт</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./images/portfolio/golden-star.jpg"
-              alt="Два человека играют в баскетбол"
-              width="370"
-              height="294"
-            />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                src="./images/portfolio/golden-star.jpg"
+                alt="Два человека играют в баскетбол"
+                width="370"
+                height="294"
+              />
+              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+              <p class="projects-text">Дизайн</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./images/portfolio/sea-food.jpg"
-              alt="Баннер ресторана"
-              width="370"
-              height="294"
-            />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                src="./images/portfolio/sea-food.jpg"
+                alt="Баннер ресторана"
+                width="370"
+                height="294"
+              />
+              <h2 class="projects-title">Ресторан Seafood</h2>
+              <p class="projects-text">Приложение</p>
+            </a>
           </li>
-          <li>
-            <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" height="294" />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" height="294" />
+              <h2 class="projects-title">Проект Prime</h2>
+              <p class="projects-text">Маркетинг</p>
+            </a>
           </li>
-          <li>
-            <img src="./images/portfolio/boxes.jpg" alt="Две коробки" width="370" height="294" />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img src="./images/portfolio/boxes.jpg" alt="Две коробки" width="370" height="294" />
+              <h2 class="projects-title">Проект Boxes</h2>
+              <p class="projects-text">Приложение</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./images/portfolio/borders.jpg"
-              alt="Изображение карты на мониторе"
-              width="370"
-              height="294"
-            />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                src="./images/portfolio/borders.jpg"
+                alt="Изображение карты на мониторе"
+                width="370"
+                height="294"
+              />
+              <h2 class="projects-title">Inspiration has no Borders</h2>
+              <p class="projects-text">Веб-сайт</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./images/portfolio/edition.jpg"
-              alt="Открытая книга"
-              width="370"
-              height="294"
-            />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                src="./images/portfolio/edition.jpg"
+                alt="Открытая книга"
+                width="370"
+                height="294"
+              />
+              <h2 class="projects-title">Издание Limited Edition</h2>
+              <p class="projects-text">Дизайн</p>
+            </a>
           </li>
-          <li>
-            <img src="./images/portfolio/lab.jpg" alt="Ярлык" width="370" height="294" />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img src="./images/portfolio/lab.jpg" alt="Ярлык" width="370" height="294" />
+              <h2 class="projects-title">Проект LAB</h2>
+              <p class="projects-text">Маркетинг</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./images/portfolio/business.jpg"
-              alt="Человек работает за ноутбуком"
-              width="370"
-              height="294"
-            />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                src="./images/portfolio/business.jpg"
+                alt="Человек работает за ноутбуком"
+                width="370"
+                height="294"
+              />
+              <h2 class="projects-title">Growing Business</h2>
+              <p class="projects-text">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="/index.html">Web<span>Studio</span></a>
-      <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8">г. Киев, пр-т Леси Украинки, 26</a>
+    <footer class="footer">
+      <a class="footer-link link" href="/index.html">Web<span>Studio</span></a>
+      <address class="">
+        <ul class="footer-list list">
+          <li class="footer-item">
+            <a class="map-link link" href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="footer-item">
+            <a class="footer-contact link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
