--- a/portfolio.html
+++ b/portfolio.html
@@ -143,8 +143,8 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-link link" href="/index.html">Web<span>Studio</span></a>
-      <address class="">
+      <a class="logo link" href="/index.html">Web<span class="logo-secondary">Studio</span></a>
+      <address>
         <ul class="footer-list list">
           <li class="footer-item">
             <a class="map-link link" href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8"
