--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,12 @@
     <!-- Header -->
     <header class="header">
       <nav class="nav">
-        <a class="logo link" href="./index.html">Web<span>Studio</span></a>
-        <ul class="nave-list list">
+        <a class="logo link" href="./index.html">Web<span class="logo-primary">Studio</span></a>
+        <ul class="nav-list list">
           <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
-          <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item">
+            <a class="nav-link link current" href="./portfolio.html">Портфолио</a>
+          </li>
           <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
