--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <header class="header">
       <nav class="nav">
         <a class="logo link" href="./index.html">Web<span class="logo-primary">Studio</span></a>
-        <ul class="nave-list list">
-          <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
-          <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+        <ul class="nav-list list">
+          <li class="nav-item"><a class="nav-link link current" href="./index.html">Студия</a></li>
+          <li class="nav-item">
+            <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+          </li>
           <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
